--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/cli": "^6.11.8",
     "@ionic/pwa-elements": "^3.0.1",
     "moment": "^2.27.0",
+    "npm": "^6.14.8",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
