--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/cli": "^6.11.8",
     "@ionic/pwa-elements": "^3.0.1",
+    "hammerjs": "^2.0.8",
     "moment": "^2.27.0",
     "npm": "^6.14.8",
     "rxjs": "~6.5.5",
