--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "buildProd": "ionic build --prod",
-    "deploy": "ionic build --prod && firebase deploy"
+    "deployProd": "ionic build --prod && firebase deploy",
+    "deploy": "ionic build && firebase deploy"
   },
   "private": true,
   "dependencies": {
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
+    "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.0.0",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
@@ -27,8 +29,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
-    "@ionic/cli": "^6.11.9",
+    "@ionic/cli": "^6.11.11",
     "@ionic/pwa-elements": "^3.0.1",
+    "firebase": "^7.22.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.27.0",
     "npm": "^6.14.8",
