--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~10.0.0",
+    "@angular/cdk": "^10.2.4",
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.0.0",
+    "@angular/material": "^10.2.4",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
@@ -31,6 +34,7 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/cli": "^6.11.11",
     "@ionic/pwa-elements": "^3.0.1",
+    "dom-to-image": "^2.6.0",
     "firebase": "^7.22.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.27.0",
