--- a/package.json
+++ b/package.json
@@ -27,16 +27,19 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@angular/service-worker": "~10.0.0",
-    "@capacitor/core": "2.4.0",
+    "@capacitor/core": "^2.4.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/social-sharing": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/cli": "^6.11.11",
     "@ionic/pwa-elements": "^3.0.1",
+    "cordova-plugin-x-socialsharing": "^6.0.2",
     "dom-to-image": "^2.6.0",
     "firebase": "^7.22.0",
     "hammerjs": "^2.0.8",
+    "jspdf": "^2.1.1",
     "moment": "^2.27.0",
     "npm": "^6.14.8",
     "rxjs": "~6.5.5",
@@ -49,7 +52,7 @@
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@angular/language-service": "~10.0.0",
-    "@capacitor/cli": "2.4.0",
+    "@capacitor/cli": "^2.4.2",
     "@ionic/angular-toolkit": "^2.3.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
