--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
               },
               {
                 "input": "src/global.scss"
-              }
+              },
+              "node_modules/animate.css/animate.css"
             ],
             "scripts": []
           },
