--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/cli": "^6.11.11",
     "@ionic/pwa-elements": "^3.0.1",
+    "animate.css": "^4.1.1",
     "cordova-plugin-x-socialsharing": "^6.0.2",
     "dom-to-image": "^2.6.0",
     "firebase": "^7.22.0",
