--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.2.0",
     "@angular/material": "^10.2.4",
+    "@angular/material-moment-adapter": "^10.2.5",
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
@@ -42,7 +43,8 @@
     "hammerjs": "^2.0.8",
     "jspdf": "^2.1.1",
     "moment": "^2.27.0",
-    "npm": "^6.14.8",
+    "ngx-material-timepicker": "^5.5.3",
+    "npm": "^7.0.5",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
